User app SdmMediaDisplays: Hidden form elements no longer have border applied now that sdmMediaDisplaysAdminFormElements.php checks if type is hidden before wrapping in styled div.

--- a/apps/SdmMediaDisplays/css/SdmDisplaysAdminPanels.css
+++ b/apps/SdmMediaDisplays/css/SdmDisplaysAdminPanels.css
@@ -117,7 +117,7 @@
     height: 78px;
     overflow: visible;
     float: right;
-    width: 85%;
+    width: 79%;
     /* background: #3498db; */
     padding-top: 20px;
     padding-left: 20px;
@@ -126,5 +126,5 @@
     /* border-style: dotted solid; */
     /* border-color: #ffffff; */
     /* border-radius: 9px; */
-    margin-top: 24px;
+    margin-top: 23px;
 }
